--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,3 +1,24 @@
 body{
     background-color: rgb(135, 206, 235);
+    margin:0;
+}
+
+.bodyHeader{
+    border: 6px dashed red;
+    display:flex;
+}
+main header{
+    border: 6px dashed green
+}
+
+img{
+    max-width: 35%;
+}
+
+
+
+form{
+    border:6p dashed red;
+    display: flex;
+    flex-direction: column;
 }
