--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,34 +1,152 @@
 :root{
-    --foreground-dark:#34128F;
+    --foreground-dark:#2a684b;
     --foreground-light:#9C78FF;
-    --background-dark:#8F8518;
-    --background-light:#DBD051;
+    --background-dark:#499913;
+    --background-light:#51dbc9;
   
   }
 *{box-sizing: border-box;}
 
 
 body{
-    background-color: rgb(135, 206, 235);
+    background-color: var(--background-light);
     margin:0;
+    min-height: 1000px;
 }
-
+a{
+    text-decoration:none;
+    color:inherit;
+  }
 .bodyHeader{
-    border: 6px dashed red;
+    background-color: var(--background-dark);
     display:flex;
-}
+    justify-content: space-between;
+    align-items: center;
+    position:sticky;
+    top:0;
+  }
+  h1{
+    margin: 2px 9px;
+
+    font-size: clamp(1.3rem, 2.2vw, 1.3rem);
+  }
+
+  #toggler{
+    display:none;
+  }
+  
+  #toggler:checked ~ ul{
+    right:0;
+  }
+  
+  label{
+    /* border:5px dashed red; */
+    width:2rem;
+    height:2rem;
+    position:absolute;
+    top:0;
+    right:0;
+    margin:.15rem;
+  }
+  
+  label div{
+    height:2px;
+    width:80%;
+    background-color: rgba(201, 57, 57, 0.986);
+    position:absolute;
+    transition: .2s;
+  }
+  
+  label div:nth-child(1){
+    top:calc( 22% - 1px);
+  }
+  label div:nth-child(2){
+    top:calc( 50% - 1px);
+  }
+  label div:nth-child(3){
+    top:calc( 78% - 1px);
+  }
+
+  #toggler:checked ~ label div:nth-child(1){
+    transform: rotate(45deg);
+    top: calc(50% - 3px);
+  }
+  #toggler:checked ~ label div:nth-child(2){
+    opacity:0;
+  }
+  #toggler:checked ~ label div:nth-child(3){
+    transform: rotate(-45deg);
+    top: calc(50% - 3px);
+  }
+  
+  ul{
+    background-color: var(--foreground-light);
+    list-style-type: none;
+    margin:0;
+    padding:.5rem;
+    display:flex;
+    position:fixed;
+    right:-100%;
+    top:2.1rem;
+    height:calc(100% - 2.1rem);
+    transition:.5s;
+    flex-direction: column;
+  }
+
+  li{
+    top:0;
+    left:0;
+    margin:.3rem;
+  }
+
+  /* warunek, wyłapujący wyświetlanie na komputerze */
+@media (min-width:768px){}
+
+    ul{
+      flex-direction: row;
+      position:static;
+      background-color: transparent;
+    }
+    label{
+      display:none;
+      display:none;
+    }
+
+    form{
+        border:3px dashed rgb(212, 0, 255);
+        display:flex;
+        flex-direction: column;
+        padding:10px;
+        gap:4px;
+      }
+
+      input, textarea{
+        padding:10px;
+      }
+      
+      img{
+        max-width: 70%;
+      }
+      
+      form{
+        width:40%;
+      }
+
+      .wrapper{
+        /* border:5px dashed pink; */
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .wrapper header{
+        width:50%;
+      }
+      
+
 main header{
-    border: 6px dashed green
+    border: 6px dashed rgb(163, 26, 129)
 }
 
 img{
     max-width: 35%;
-}
-
-
-
-form{
-    border:6p dashed red;
-    display: flex;
-    flex-direction: column;
 }
