--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -142,6 +142,9 @@ a{
         width:50%;
       }
       
+      h2{text-align: center;}
+
+    
 
 main header{
     border: 6px dashed rgb(163, 26, 129)
