--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -3,6 +3,7 @@
     --foreground-light:#9C78FF;
     --background-dark:#499913;
     --background-light:#51dbc9;
+    --background-color: #991313;
   
   }
 *{box-sizing: border-box;}
@@ -12,11 +13,10 @@ body{
     background-color: var(--background-light);
     margin:0;
     min-height: 1000px;
+    font-family: 'PT Serif', serif;
 }
-a{
-    text-decoration:none;
-    color:inherit;
-  }
+
+  
 .bodyHeader{
     background-color: var(--background-dark);
     display:flex;
@@ -38,6 +38,7 @@ a{
   #toggler:checked ~ ul{
     right:0;
   }
+  
   
   label{
     /* border:5px dashed red; */
@@ -80,7 +81,7 @@ a{
   }
   
   ul{
-    background-color: var(--foreground-light);
+    background-color: var(--background-dark);
     list-style-type: none;
     margin:0;
     padding:.5rem;
@@ -92,7 +93,9 @@ a{
     transition:.5s;
     flex-direction: column;
   }
-
+a{
+  text-decoration: none;
+}
   li{
     top:0;
     left:0;
@@ -100,17 +103,19 @@ a{
   }
 
   /* warunek, wyłapujący wyświetlanie na komputerze */
-@media (min-width:768px){}
+@media (min-width:768px){
 
-    ul{
-      flex-direction: row;
-      position:static;
-      background-color: transparent;
-    }
-    label{
-      display:none;
-      display:none;
-    }
+  ul{
+    flex-direction: row;
+    position:static;
+    background-color: transparent;
+  }
+  label{
+    display:none;
+    display:none;
+  }
+}
+
 
     form{
         border:3px dashed rgb(212, 0, 255);
@@ -124,12 +129,10 @@ a{
         padding:10px;
       }
       
-      img{
-        max-width: 70%;
-      }
+      
       
       form{
-        width:40%;
+        width:65%;
       }
 
       .wrapper{
@@ -143,13 +146,55 @@ a{
       }
       
       h2{text-align: center;}
-
+      
+      
     
 
-main{
-    border: 3px dashed rgb(170, 26, 129)
+
+         img{
+          max-width: 40%;
+   
+        }
+
+        .wrapper h2 {
+          margin:5;
+        }
+
+        p{
+          margin:0;
+          text-align: center;
+        }
+        /* div na któym osadzamy tabelkę */
+    .tableWrapper{
+      /* dajemy padding tylko z prawej i lewej strony */
+      padding: 0 6rem;
+      }
+      
+  table{
+  /* box shadow ze strony https://getcssscan.com/css-box-shadow-examples*/
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  /* max szerokość strony */
+  width:100%;
+  /* usuwamy granice pomiędzy wierszami i kolumnami */
+  border-collapse: collapse;
 }
 
-img{
-    max-width: 35%;
+  th{
+  /* ustawiamy kolor ze zmiennych */
+  background-color: var(--foreground-dark);
+  padding:.8rem;
 }
+
+td{
+  padding:.3rem;
+}
+
+tr{
+  background: var(--background-dark);
+}
+/* even|odd - co drugie dziecko */
+tr:nth-child( even ){
+  background: var(--background-color);
+}
+
+footer
