--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -97,6 +97,7 @@ a{
   text-decoration: none;
 }
   li{
+  
     top:0;
     left:0;
     margin:.3rem;
@@ -118,11 +119,15 @@ a{
 
 
     form{
-        border:3px dashed rgb(212, 0, 255);
+        border:3px dashed rgb(70, 55, 73);
         display:flex;
         flex-direction: column;
         padding:10px;
         gap:4px;
+        background: var(--foreground-lighter);
+        box-shadow: var(--default-box-shadow);
+        border-radius: .5rem;
+        margin-top: 2rem;
       }
 
       input, textarea{
@@ -153,6 +158,7 @@ a{
 
          img{
           max-width: 40%;
+          margin-top: 1rem;
    
         }
 
@@ -161,13 +167,14 @@ a{
         }
 
         p{
-          margin:0;
+          margin: 2px;
           text-align: center;
         }
         /* div na któym osadzamy tabelkę */
     .tableWrapper{
       /* dajemy padding tylko z prawej i lewej strony */
-      padding: 0 6rem;
+      padding: 0 .6rem;
+      margin-top: 2rem;
       }
       
   table{
@@ -197,4 +204,22 @@ tr:nth-child( even ){
   background: var(--background-color);
 }
 
-footer
+footer{
+  /* border:2px dashed red; */
+  margin-top:3rem;
+  background-color: rgb(95, 76, 76);
+  color:rgb(255, 255, 255);
+  font-size:.8rem;
+  display:flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding:1rem;
+}
+footer ol{
+  list-style: none;
+  margin:0;
+  padding:0;
+}
+footer p {
+  margin:0;
+}
