--- a/weather/style/style.scss
+++ b/weather/style/style.scss
@@ -5,7 +5,7 @@ body{
       border:2px dashed red;
       header{
         .city{
-          border:2px dashed blue;
+          border:2px dashed rgb(255, 187, 0);
           display:flex;
           justify-content: space-between;
           align-items: center;
