--- a/weather/style/style.scss
+++ b/weather/style/style.scss
@@ -1,11 +1,11 @@
 body{
-    background-color: royalblue;
+    background-color: rgb(209, 225, 65);
     margin:0;
     main{
       border:2px dashed red;
       header{
         .city{
-          border:2px dashed rgb(255, 187, 0);
+          border:2px dashed rgb(55, 0, 255);
           display:flex;
           justify-content: space-between;
           align-items: center;
